# den

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.guix  README.md  pyproject.toml  railway.toml
.githooks/: pre-commit
.github/workflows/: smoke.yml
34/7f0c4ac3a1/: metadata.json
34/7f0c4ac3a1/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
34/7f0c4ac3a1/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
34/7f0c4ac3a1/2/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
34/7f0c4ac3a1/3/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
34/7f0c4ac3a1/4/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
34/7f0c4ac3a1/5/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
34/7f0c4ac3a1/6/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
34/7f0c4ac3a1/7/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
crates/den-cli/: Cargo.toml
crates/den-cli/src/: lib.rs  main.rs
crates/den-cli/tests/: assets_and_cli.rs
crates/den-core/: Cargo.toml
crates/den-core/src/: dhall.rs  fly.rs  lib.rs  names.rs  porkbun.rs  project.rs  railway.rs  runtime.rs  sprite.rs  sprite_parse.rs  tailscale.rs
crates/den-core/tests/: core_properties.proptest-regressions  core_properties.rs
crates/den-mcp/: Cargo.toml
crates/den-mcp/src/: main.rs  tools.rs
dhall/: Types.dhall  default.dhall  example.dhall  generate-guix.dhall  generate-railway.dhall
docs/: dhall-to-guix.md  extending-den.md  mcp-server.md  property-tests-troubleshooting.md  roadmap.md  selfhosted-runtime.md  telemetry.md  workflows.md
guix/: channels.scm  home.scm  manifest.scm  system.scm
scripts/: bootstrap-guix.sh  bootstrap.sh  build-guix-image.sh  entrypoint-guix.sh  entrypoint.sh  generate-from-dhall.sh  install-hooks.sh  install.sh
site/: README.md  den.dhall  flake.nix  index.html  package.json  railway.toml
skills/den/: SKILL.md
skills/den-sprite-sesame-provider/: SKILL.md
skills/den-sprite-sesame-provider/agents/: openai.yaml
skills/den/agents/: openai.yaml
src/den_cli/: __init__.py  cli.py  core.py  mcp_server.py
tests/: test-den.sh
tests/antithesis/: test_core_properties.py
tests/python/: test_cli_commands.py  test_core_properties.py  test_mcp_server.py
