[workspace]
resolver = "2"
members = [
    "crates/den-core",
    "crates/den-cli",
    "crates/den-mcp",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[workspace.dependencies]
den-core = { path = "crates/den-core" }
sesame = { path = "../../sesame", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "7"
rust-mcp-sdk = { version = "0.9", features = ["macros", "server", "stdio"] }
async-trait = "0.1"
