[package]
name = "den-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "den"
path = "src/main.rs"

[dependencies]
den-core = { workspace = true, features = ["cli", "io"] }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
which = { workspace = true }
