[package]
name = "den-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "den-mcp"
path = "src/main.rs"

[dependencies]
den-core = { workspace = true, features = ["cli", "io"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rust-mcp-sdk = { workspace = true }
async-trait = { workspace = true }
